Applied code reformat and cleanup on everything

--- a/lt-wicket-util/src/main/kotlin/de/loosetie/util/wicket/feedback/MyFeedbackPanel.html
+++ b/lt-wicket-util/src/main/kotlin/de/loosetie/util/wicket/feedback/MyFeedbackPanel.html
@@ -3,7 +3,7 @@
 <body>
 <wicket:panel>
   <div wicket:id="feedbackul">
-    <div wicket:id="messages" class="alert" role="alert">
+    <div class="alert" role="alert" wicket:id="messages">
       <div wicket:id="message">A message</div>
     </div>
   </div>
