--- a/lt-wicket-util/src/main/kotlin/de/loosetie/util/wicket/border/MultiSelectBorder.html
+++ b/lt-wicket-util/src/main/kotlin/de/loosetie/util/wicket/border/MultiSelectBorder.html
@@ -10,7 +10,7 @@
     <wicket:body/>
     <wicket:panel wicket:id="autoCompletePanel"/>
     <div class="lt-footer text-right">
-      <button type="submit" class="btn btn-primary" wicket:id="submit-form">Add</button>
+      <button class="btn btn-primary" type="submit" wicket:id="submit-form">Add</button>
     </div>
   </div>
 
