--- a/lt-wicket-util/src/main/kotlin/de/loosetie/util/wicket/border/MyAutoCompleteDropdownPanel.html
+++ b/lt-wicket-util/src/main/kotlin/de/loosetie/util/wicket/border/MyAutoCompleteDropdownPanel.html
@@ -7,7 +7,7 @@
 <wicket:panel>
 
   <div class="lt-editable-text position-relative">
-    <input class="form-control" wicket:id="textFieldValue" type="text">
+    <input class="form-control" type="text" wicket:id="textFieldValue">
     <label wicket:id="labelValue"> </label>
   </div>
 
